Add the Rust-core elan_i2c module